--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <!-- Custom styles -->
         <link rel="stylesheet" href="css/custom.css">
         <link rel="stylesheet" href="css/image-circle-effect.css">
-        <title>AAA City Homepage</title>
+        <title>Welcom to AAA City!</title>
   </head>
   <body class=" dark-theme ">
 
