--- a/index.html
+++ b/index.html
@@ -573,7 +573,7 @@
                       <div class="row ">
                         <div class="col-12 col-lg-6">
                           <div class="   input-wrapper">
-                            <input class="text-input" id="user-name" name="user-name" type="text" required minlength="2" maxlength="50" pattern="[A-Za-z\s\-\']+"/>
+                            <input class="text-input" id="user-name" name="user-name" type="text" required minlength="2" maxlength="50" pattern="[A-Za-z \-']+"/>
                             <label class="input-label" for="user-name"> Name <span class="req">*</span></label><span class="b-border"></span><span class="error-msg"></span>
                           </div>
                         </div>
