--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta name="msvalidate.01" content="489B30BED5DE4CD0EB26B2398D1E86E3" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="AAA City helps Sydney businesses automate tasks with AI, RPA, chatbots & smart websites — reduce manual work, boost efficiency, and grow faster.">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
