--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@
   <title>AI Business Automation in Sydney | AAA City</title>
   
   <!-- Canonical Tag -->
-  <link rel="canonical" href="https://aaa.city/" />
+  <link rel="canonical" href="https://www.aaa-city.com/" />
   
   <!-- Open Graph Tags -->
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://aaa.city/" />
+  <meta property="og:url" content="https://www.aaa-city.com/" />
   <meta property="og:title" content="AI Business Automation in Sydney | AAA City" />
   <meta property="og:description" content="AAA City helps Sydney businesses automate tasks with AI, RPA, chatbots & smart websites — reduce manual work, boost efficiency, and grow faster." />
   <meta property="og:image" content="images/AAA_City_logo.webp" />
   
   <!-- Twitter Card Tags -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:url" content="https://aaa.city/" />
+  <meta name="twitter:url" content="https://www.aaa-city.com/" />
   <meta name="twitter:title" content="AI Business Automation in Sydney | AAA City" />
   <meta name="twitter:description" content="AAA City helps Sydney businesses automate tasks with AI, RPA, chatbots & smart websites — reduce manual work, boost efficiency, and grow faster." />
   <meta name="twitter:image" content="images/AAA_City_logo.webp" />
@@ -35,9 +35,9 @@
     "name": "AAA City",
     "description": "AI Business Automation in Sydney",
     "image": "images/AAA_City_logo_white_mid.webp",
-    "url": "https://aaa.city/",
+    "url": ""https://www.aaa-city.com/"",
     "telephone": "(+61) 411616655",
-    "email": "info@aaa.city",
+    "email": "info@aaa-city.com",
     "address": {
       "@type": "PostalAddress",
       "addressLocality": "Sydney",
@@ -289,8 +289,7 @@
                 <div class="col-10">
                   <p class="hero-subtitle">
                     <p></p>
-                    AAA City delivers business automation in Sydney through tailored workflow automation solutions and AI. Our systems reduce manual input, improve efficiency, and allow your team to focus on what truly matters — with expert support from trusted Sydney automation consultants.
-                    </p>
+                    AAA City delivers tailored workflow automation solutions backed by AI to business in Sydney. Our systems reduce manual input, improve efficiency, and allow your team to focus on what truly matters.</p>
 
                 </div>
                 <div class="col-12">
@@ -307,10 +306,9 @@
           </div>
           <!--start of .image-area -->
           <div class="col-10   mx-auto col-lg-6 text-center " data-tilt>
-            <div class="hero-image-area  ">
+                          <div class="hero-image-area  ">
               <div class="hero-img-wraper"><img class="img-fluid " src="images/hero-bg.webp" alt="Hero illustration" draggable="false">
                 <div class="radar"></div>
-                <div class="orbit">           </div>
               </div>
             </div>
           </div>
@@ -355,7 +353,7 @@
               <div class="service-icon"><i class="flaticon-manufacturing font-icon"></i></div><span class="service-num hollow-text">2    </span>
               <div class="service-content">
                 <h4 class="service-title">Robotic Process Automation</h4>
-                <p class="service-text">Our Sydney RPA solutions free up hours every week for small and medium businesses looking to eliminate repetitive tasks. Our intelligent RPA bots handle everything from data entry to payroll processing and automated invoicing, guided by expert RPA consulting to build scalable systems that grow with your business.</p>
+                <p class="service-text">Our Robotic Process Automation (RPA) solutions free up hours every week for small and medium businesses looking to eliminate repetitive tasks. Our intelligent RPA bots handle everything from data entry to payroll processing and automated invoicing, guided by expert consultants to build scalable systems that grow with your business.</p>
               </div>
             </div>
             <!-- End Second service box-->
@@ -466,7 +464,7 @@
                     <div class="industry-summary">
                       <div class="industry-text">
                         <h4 class="industry-title">Trades & Services</h4>
-                        <p class="industry-excerpt">Sydney tradespeople rely on our automation solutions to eliminate administrative overhead. Our AI systems handle intelligent job scheduling, automated quoting, digital paperwork, and streamlined invoicing. With specialised automation technology, Sydney tradies spend less time on administration and more time generating revenue through billable work.
+                        <p class="industry-excerpt">Sydney tradespeople rely on our automation solutions to eliminate administrative overheads. Our AI systems handle intelligent job scheduling, automated quoting, digital paperwork, and streamlined invoicing. With specialised automation technology, Sydney tradies spend less time on administration and more time generating revenue through billable work.
                         </p>
                       </div>
                     </div>
@@ -490,7 +488,7 @@
                     <div class="industry-summary">
                       <div class="industry-text">
                         <h4 class="industry-title">Creative Studios & Agencies</h4>
-                        <p class="industry-excerpt">Creative agencies and studios thrive when they're focused on what they do best — creating. Our smart workflow systems manage quoting, resource planning, approvals, and client communication, helping Sydney-based teams reduce admin time and boost billable hours. Our tailored systems keep your workflow smooth and your projects moving forward faster.</p>
+                        <p class="industry-excerpt">Creative agencies and studios thrive when they're focused on what they do best — creating. Our smart workflow systems manage quoting, resource planning, approvals, and client communication, helping our customers reduce admin time and boost output. Our tailored systems keep your workflow smooth and your projects moving forward faster.</p>
                       </div>
                     </div>
                   </div>
@@ -524,8 +522,7 @@
                     <h2 class=" title    wow fadeInUp" data-wow-delay=".4s">Built for Simplicity - <span class='featured-text'>Powered by AI<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 500 150" preserveAspectRatio="none"><path d="M7.7,145.6C109,125,299.9,116.2,401,121.3c42.1,2.2,87.6,11.8,87.3,25.7"></path></svg></span></h2>
                   </div>
                 </div>
-                <p class=" about-text">We're your Sydney-based automation experts, dedicated to building intelligent systems that understand the local market and your unique workflow. Our goal? To make automation work for you — not the other way around.
-                </p>
+                <p class=" about-text">We're your Sydney-based automation experts, dedicated to building intelligent systems that understand the local market and your unique workflows. </p>
                 <div class="info-items-list">
                   <div class="row ">
                     <div class="col-12 ">
@@ -541,7 +538,7 @@
                       <div class="info-item" data-subsection="why-choose-us-item" data-item-id="2"><span class="info-number ">02.</span>
                         <div class="info-content">
                           <h5 class="info-title">Local Support, End-to-End Service</h5>
-                          <p class="info-text">Based in Sydney, we provide real-time support, local expertise, and full-service automation — from planning and implementation to ongoing optimisation. No call centers. No delays. Just seamless execution.
+                          <p class="info-text">We provide real-time support, local expertise, and full-service automation — from planning and implementation to ongoing optimisation. No call centers. No delays. Just seamless execution.
                           </p>
                         </div>
                       </div>
@@ -549,7 +546,7 @@
                     <div class="col-12 ">
                       <div class="info-item" data-subsection="why-choose-us-item" data-item-id="3"><span class="info-number ">03.</span>
                         <div class="info-content">
-                          <h5 class="info-title">Secure, Smart, and Compliant</h5>
+                          <h5 class="info-title">Secure, Smart, and Seamless</h5>
                           <p class="info-text">Under the hood, our AI automation tools are robust, scalable, and built with privacy at their core. We comply with GDPR and Australian data privacy laws, giving you full confidence in security and performance.</p>
                         </div>
                       </div>
@@ -622,7 +619,7 @@
                         <h2 class=" title    wow fadeInUp" data-wow-delay=".4s">AI Business Automation for <span class='featured-text'>Sydney Companies<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 500 150" preserveAspectRatio="none"><path d="M7.7,145.6C109,125,299.9,116.2,401,121.3c42.1,2.2,87.6,11.8,87.3,25.7"></path></svg></span></h2>
                       </div>
                     </div>
-                    <p class=" about-text">AAA City is your dedicated Sydney partner for intelligent business automation. We help businesses across Sydney eliminate manual tasks, optimise workflows, and grow faster through AI-powered solutions.
+                    <p class=" about-text">AAA City is your dedicated partner for intelligent business automation. We help businesses across Sydney eliminate manual tasks, optimise workflows, and grow faster through AI-powered solutions.
                     </p>
                     <div class="info-items-list ">
                       <div class="row ">
@@ -903,7 +900,7 @@
                 <!-- Contact Information -->
                 <h2 class="footer-col-title text-center">Contact Information</h2>
                 <div class="footer-contact-info">
-                  <div class="contact-info-card"><i class="flaticon-mail icon"></i><a class="text-lowercase info" href="mailto:info@aaa-city.com">info@aaa.city</a></div>
+                  <div class="contact-info-card"><i class="flaticon-mail icon"></i><a class="text-lowercase info" href="mailto:info@aaa-city.com">info@aaa-city.com</a></div>
                   <!--<div class="contact-info-card"><i class="bi bi-geo-alt icon"></i><span class="text info">Unit 4, 126 - 128 Avoca St, Randwick NSW 2031</span></div>-->
                   <div class="contact-info-card"><i class="flaticon-telephone icon"></i><a class="info" href="tel:+61411616655">(+61) 411616655</a></div>
                 </div>
