--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     "name": "AAA City",
     "description": "AI Business Automation in Sydney",
     "image": "images/AAA_City_logo_white_mid.webp",
-    "url": ""https://www.aaa-city.com/"",
+    "url": "https://www.aaa-city.com/",
     "telephone": "(+61) 411616655",
     "email": "info@aaa-city.com",
     "address": {
