--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -27,9 +27,11 @@
         <!-- Font Family -->
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Jost:wght@400;500;600;700;800&amp;display=swap">
 
-        <!-- main-LTR -->
+        <!-- main css -->
         <link rel="stylesheet" href="css/main.css">
         <title>Privacy Policy | AAA City</title>
+
+        <link rel="canonical" href="https://www.aaa-city.com/privacy-policy.html" />
 
         <!-- Terms & Privacy Pages CSS -->
         <link rel="stylesheet" href="css/terms-privacy.css" />
