--- a/terms-conditions.html
+++ b/terms-conditions.html
@@ -30,6 +30,7 @@
         <!-- main-LTR -->
         <link rel="stylesheet" href="css/main.css">
         <title>Terms and Conditions | AAA City</title>
+        <link rel="canonical" href="https://www.aaa-city.com/terms-conditions.html" />
 
         <!-- Terms & Privacy Pages CSS -->
         <link rel="stylesheet" href="css/terms-privacy.css" />
