--- a/index.html
+++ b/index.html
@@ -226,138 +226,13 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Jost:wght@400;500;600;700;800&amp;display=swap">
     <link rel="stylesheet" href="css/main-combined.css">
 
-    <style>
-      body {
-        margin-top: 0 !important;
-        padding-top: 0 !important;
-      }
-
-      img {
-        max-width: 100%;
-        height: auto;
-      }
-
-      @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
-        img {
-          image-rendering: -webkit-optimize-contrast;
-        }
-      }
-
-      .page-hero {
-        min-height: 100vh;
-        padding: 100px 0;
-        align-items: center;
-      }
-
-      .hero-row {
-        align-items: center;
-      }
-
-      .hero-text-area {
-        margin-top: 2.5rem;
-      }
-
-      .hero-social-icons {
-        margin-bottom: 1rem;
-      }
-
-      .hero-cta-container {
-        display: flex;
-        align-items: center;
-        flex-wrap: wrap;
-      }
-
-      @media (orientation: portrait) {
-        .page-hero {
-          padding-top: 0 !important;
-          min-height: auto !important;
-          padding-bottom: 60px;
-          align-items: flex-start !important;
-        }
-
-        .hero-row {
-          align-items: flex-start !important;
-        }
-
-        .hero-text-area {
-          margin-top: 0 !important;
-        }
-
-        .hero-social-icons {
-          padding-top: 15px;
-          margin-bottom: 0.5rem;
-        }
-      }
-
-      @media (max-width: 576px) {
-        .hero-img-wraper img {
-          max-width: 90%;
-          margin: 0 auto;
-        }
-
-        .industry-img-wrapper {
-          height: auto !important;
-          max-height: 250px;
-          overflow: hidden;
-        }
-
-        .portfolio-img {
-          height: auto !important;
-        }
-
-        .page-hero {
-          padding-bottom: 30px !important;
-        }
-
-        @media (orientation: portrait) {
-          .page-hero {
-            padding-top: 0 !important;
-          }
-
-          .hero-social-icons {
-            padding-top: 10px;
-          }
-        }
-
-      @media (max-width: 360px) {
-        .page-hero .cta-links-area .cta-btn {
-          padding: 0.5rem 0.75rem !important;
-          font-size: 0.9rem !important;
-          white-space: nowrap;
-          min-width: auto !important;
-          width: auto !important;
-          height: auto !important;
-          aspect-ratio: auto !important;
-        }
-
-        .page-hero .cta-links-area .cta-btn .icon {
-          font-size: 1.2rem !important;
-          margin-left: 0.3rem !important;
-        }
-
-        .page-hero .logo-wrapper {
-          margin-left: 0.5rem !important;
-        }
-
-        .page-hero .logo-wrapper img {
-          max-width: 120px !important;
-        }
-
-        .hero-cta-container {
-          justify-content: flex-start;
-          gap: 0.5rem;
-        }
-      }
-      }
-    </style>
-
 
 
   </head>
   <body class=" dark-theme ">
 
 
-    <header role="banner" style="margin: 0; padding: 0;">
+    <header role="banner">
     <section class="page-hero d-flex" id="page-hero" data-section="hero">
       <div class="overlay-photo-image-bg" data-bg-img="images/pattern-bg-2.jpg" data-bg-opacity=".2"></div>
       <div class="section-dotted-bg"></div>
@@ -394,7 +269,7 @@
                     </div>
                     <!-- AAA City Logo -->
                     <div class="logo-wrapper d-inline-block ms-4">
-                      <img class="img-fluid" src="images/AAA_City_logo.webp" alt="AAA City Logo" style="max-width: 150px; vertical-align: middle;" width="150" height="auto">
+                      <img class="img-fluid" src="images/AAA_City_logo.webp" alt="AAA City Logo" width="150" height="auto">
                     </div>
                   </div>
                 </div>
@@ -424,12 +299,12 @@
       <div class="container">
 
 
-        <div class="sec-heading" style="display: flex; flex-wrap: wrap; align-items: center; justify-content: space-between;">
-          <div class="content-area" style="flex: 1;">
+        <div class="sec-heading">
+          <div class="content-area">
             <span class="pre-title wow fadeInUp" data-wow-delay=".2s">services</span>
-            <div style="display: flex; align-items: center; flex-wrap: wrap; width: 100%;">
-              <h2 class="title wow fadeInUp" data-wow-delay=".4s" style="margin-right: auto;">What We Automate for You</h2>
-              <div class="cta-area wow fadeInUp" data-wow-delay=".8s" style="margin-left: auto;"><a class="cta-btn btn-solid" href="#contact-us">Contact Us<i class="flaticon-next icon"></i></a></div>
+            <div>
+              <h2 class="title wow fadeInUp" data-wow-delay=".4s">What We Automate for You</h2>
+              <div class="cta-area wow fadeInUp" data-wow-delay=".8s"><a class="cta-btn btn-solid" href="#contact-us">Contact Us<i class="flaticon-next icon"></i></a></div>
             </div>
             <p class="about-text wow fadeInUp" data-wow-delay=".6s">From simple tasks to complex business processes, our AI automation solutions are designed to work seamlessly with your existing operations — delivering intelligent, scalable, and user-friendly automation. We develop custom AI models, implement powerful workflow automation tools, and create intelligent systems that help Sydney businesses reduce manual work and boost productivity.</p>
           </div>
@@ -511,12 +386,12 @@
      <!-- Start  blog Section-->
      <section class="industries industries-home mega-section" id="industries" data-section="industries">
       <div class="container ">
-        <div class="sec-heading" style="display: flex; flex-wrap: wrap; align-items: center; justify-content: space-between;">
-          <div class="content-area" style="flex: 1;">
+        <div class="sec-heading">
+          <div class="content-area">
             <span class="pre-title wow fadeInUp" data-wow-delay=".2s">Industries We Help</span>
-            <div style="display: flex; align-items: center; flex-wrap: wrap; width: 100%;">
-              <h2 class="title wow fadeInUp" data-wow-delay=".4s" style="margin-right: auto;">Smarter Systems for Every Sector</h2>
-              <div class="cta-area wow fadeInUp" data-wow-delay=".8s" style="margin-left: auto;"><a class="cta-btn btn-solid" href="#contact-us">Contact Us<i class="flaticon-next icon"></i></a></div>
+            <div>
+              <h2 class="title wow fadeInUp" data-wow-delay=".4s">Smarter Systems for Every Sector</h2>
+              <div class="cta-area wow fadeInUp" data-wow-delay=".8s"><a class="cta-btn btn-solid" href="#contact-us">Contact Us<i class="flaticon-next icon"></i></a></div>
             </div>
             <p class="about-text wow fadeInUp" data-wow-delay=".6s">At AAA City, we deliver targeted automation solutions for Sydney businesses. Our automation systems are purpose-built for the unique workflows and challenges in your sector — helping businesses across Sydney accomplish more with less manual effort.</p>
           </div>
@@ -1087,7 +962,7 @@
                 <div class="col-12 text-center">
                   <p class="credits">
                     &copy; Copyright 2025 AAA City. All Rights Reserved. Read our<br>
-                    <a href="terms-conditions.html" style="color: #00c7f4; text-decoration: none;">Terms & Conditions</a>, and <a href="privacy-policy.html" style="color: #00c7f4; text-decoration: none;">Privacy Policy</a>.
+                    <span class="footer-links"><a href="terms-conditions.html">Terms & Conditions</a>, and <a href="privacy-policy.html">Privacy Policy</a>.</span>
                   </p>
                 </div>
                 </div>
@@ -1109,28 +984,7 @@
 
             <!--     JQuery     -->
             <script src="js/vendors/jquery-3.7.1.min.js"></script>
-            <!-- No additional font scripts needed -->
-
-            <!-- Force reload fonts to ensure they're loaded properly -->
-            <script>
-              document.addEventListener("DOMContentLoaded", function() {
-                // Force reload flaticon font to ensure proper loading
-                const style = document.createElement('style');
-                style.innerHTML = `
-                  @font-face {
-                    font-family: "flaticon_aaa_city_website";
-                    src: url("webfonts/vendors/flaticon/flaticon_aaa_city_website.woff2") format("woff2"),
-                         url("webfonts/vendors/flaticon/flaticon_aaa_city_website.woff") format("woff"),
-                         url("webfonts/vendors/flaticon/flaticon_aaa_city_website.eot#iefix") format("embedded-opentype"),
-                         url("webfonts/vendors/flaticon/flaticon_aaa_city_website.ttf") format("truetype"),
-                         url("webfonts/vendors/flaticon/flaticon_aaa_city_website.svg#flaticon_aaa_city_website") format("svg");
-                  }
-                  .flaticon { font-family: "flaticon_aaa_city_website" !important; }
-                `;
-                document.head.appendChild(style);
-              });
-            </script>
-
+            
             <!-- Bootstrap -->
             <script src="js/vendors/bootstrap.bundle.min.js"></script>
 
@@ -1139,8 +993,6 @@
 
             <!--     wow     -->
             <script src="js/vendors/wow.min.js"></script>
-
-            <!-- swiper removed - not being used -->
 
             <!--     Vanilla-tilt     -->
             <script src="js/vendors/vanilla-tilt.min.js"></script>
