--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                 </div>
                 <div class="col-10">
                   <p class="hero-subtitle">
-                    AAA City delivers tailored workflow automation solutions backed by AI to business in Sydney. Our systems reduce manual input, improve efficiency, and allow your team to focus on what truly matters.
+                    AAA City delivers tailored workflow automation solutions backed by AI to businesses in Sydney. Our systems reduce manual input, improve efficiency, and allow your team to focus on what truly matters.
                   </p>
                 </div>
                 <div class="col-12">
