--- a/index.html
+++ b/index.html
@@ -908,7 +908,7 @@
                             <div class="col-12 submit-wrapper">
                               <div class="recaptcha-submit-container">
                                 <button class="btn-solid" id="submit-btn" type="submit" name="UserSubmit">Send your message</button>
-                                <div class="g-recaptcha" data-sitekey="6LeSekYrAAAAABi8ENisugRcUt2f5E3uXBnd8xGU"></div>
+                                <div class="g-recaptcha recaptcha-dark" data-sitekey="6LeSekYrAAAAABi8ENisugRcUt2f5E3uXBnd8xGU" data-theme="dark"></div>
                               </div>
                               <div class="recaptcha-error-msg error-msg"></div>
                             </div>
